--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -4,7 +4,7 @@
     <title>Robin8 Marketing Dashboard</title>
     <meta charset='utf-8' />
     <%= stylesheet_link_tag 'admin' %>
-    <% if params[:controller].include? 'sessions' %>
+    <% if (params[:controller].include? 'sessions'  rescue false)  %>
     <% else %>
       <%= javascript_include_tag 'admin' %>
       <%= javascript_include_tag '//cdn.staticfile.org/Plupload/2.1.1/plupload.full.min.js' %>
@@ -14,7 +14,7 @@
     <%= favicon_link_tag 'favicon.ico' %>
   </head>
   <body>
-    <% if params[:controller].include? 'sessions' %>
+    <% if (params[:controller].include? 'sessions'  rescue false) %>
       <%= yield %>
     <% else %>
       <div id="wrapper">
