--- a/app/views/marketing_dashboard/campaigns/index.csv.erb
+++ b/app/views/marketing_dashboard/campaigns/index.csv.erb
@@ -26,7 +26,7 @@
     @campaigns.each do |campaign|
       csv << [
         campaign.id,
-        campaign.name,
+        campaign.name.gsub(/,/, '，'),
         campaign.user_id,
         campaign.status,
         campaign.per_budget_type,
