marketing_dashboard add promotions manage

--- a/app/views/layouts/_admin_nav.html.erb
+++ b/app/views/layouts/_admin_nav.html.erb
@@ -401,6 +401,9 @@
             <li>
               <%= link_to "配置定价", marketing_dashboard_utilities_settings_path %>
             </li>
+            <li>
+              <%= link_to "配置促销送积分", marketing_dashboard_utilities_promotions_path %>
+            </li>
           </ul>
         </li>
         <% end %>
