--- a/app/views/marketing_dashboard/campaigns/add_example_screenshot.html.erb
+++ b/app/views/marketing_dashboard/campaigns/add_example_screenshot.html.erb
@@ -1,37 +1,8 @@
 <head>
 <style type="text/css">　　
-  form{
-    width: 500px;
-  }
-  #imagesUpload{
-    list-style: none;
-  }
-  #imagesUpload .newImage{
-    border: 1px solid;
-    padding: 20px;
-  }
-  #imagesUpload .newImage input{
-    max-width: 200px;
-  }
-  #imagesUpload .newImage::after{
-    font: 1.5em/0.45em helvetica;
-    padding: 7px 8px 5px 8px;
-    content:"-";
-    float: right;
-    height: 0.5em;
-    margin: -3px 0px;
-    background: #000;
-    color: #fff;
-    border-radius: 50px;
-    border: black 1px solid;
-    cursor: pointer;
-  }
-  #imagesUpload .newImage:last-child::after{
-    content:"+";
-    padding: 5px 5px 6px 5px;
-    margin: -3px 0;
-  }
-</style>　　
+.row {
+  margin-top:15px;
+}</style>　　
 </head>
 <div class="container-fluid" style="padding: 100px 50px;">
   <% if @campaign.example_screenshot_required? %>
@@ -39,33 +10,60 @@
   <% else %>
     <h1>请添加具体要求</h1>
   <% end %>
-  <form action="save_example_screenshot_and_remark" method="post" enctype="multipart/form-data" >
-  <fieldset>
-    <legend>图片上传</legend>
-    <ul id="imagesUpload">
-      <li class="newImage" id="newImage1">
-        <label for="image1"> 图片 1 </label>
-        <input type="file" name="image1" id="image1" value="image1" />
-      </li>
-    </ul>
-  </fieldset>
-  <fieldset>
-    <legend>介绍</legend>
-    <textarea placeholder="添加介绍" rows="20" name="comment" id="comment_text" cols="40" class="ui-autocomplete-input" autocomplete="off" role="textbox" aria-autocomplete="list" aria-haspopup="true"></textarea>
-    <input type="hidden" name="controller" value="save_example_screenshot_and_remark">
-    <button>提交</button>
-  </fieldset>
-</form>  
+  <div class="container">
+    <div class="row">
+      <form action="save_example_screenshot_and_remark" method="post" enctype="multipart/form-data" class="form-horizontal">
+        <div class="form-group video_container">
+          <label for="file-upload" class="col-sm-2 control-label">上传图片标签</label>
+          <div class="col-sm-8">
+            <input type="file" name="image[]">
+            <input type="text" name="comment[]">
+          </div>
+          <div class="col-sm-2">
+            <button class="btn btn-success video-add">
+              <span class="fa fa-plus"></span>
+            </button>
+          </div>
+        </div>
+         <legend>介绍</legend>
+          <textarea placeholder="This is an awesome comment box" rows="20" name="remark" id="remark_text" cols="40" class="ui-autocomplete-input" autocomplete="off" role="textbox" aria-autocomplete="list" aria-haspopup="true"></textarea>
+          <button>提交</button>
+        </fieldset>
+      </form>
+    </div>
+  </div>
 </div>
 
 <script>
-  var i=2;
-    $("#imagesUpload").on('click',".newImage:last-child",function(){
-      $("#imagesUpload").append('<li class="newImage" id="newImage'+i+'"><label for="image'+i+'">图片 '+i+' </label><input type="file" name="image'+i+'" id="image'+i+'" value="image1" />');
-      i++;
-    });
+$(document)
+  .on("click", ".video_container .video-add", function(e) {
+    e.preventDefault();
+    var current_obj = $(this).closest(".video_container");
+    var cloned_obj = $(current_obj.clone())
+      .insertAfter(current_obj)
+      .find('input[type="file"]')
+      .val("");
 
-    $("#imagesUpload").on('click',".newImage:not(:last-child)",function(){
-        this.remove();
-    });
+    current_obj
+      .find(".fa-plus")
+      .removeClass("fa-plus")
+      .addClass("fa-minus");
+
+    current_obj
+      .find(".btn-success")
+      .removeClass("btn-success")
+      .addClass("btn-danger");
+
+    current_obj
+      .find(".video-add")
+      .removeClass("video-add")
+      .addClass("video-del");
+  })
+  .on("click", ".video-del", function(e) {
+    e.preventDefault();
+    $(this)
+      .closest(".video_container")
+      .remove();
+    return false;
+  });
 </script>
