add price sheet choice to react judge,render;add price_sheet to ajax and api

--- a/client/assets/stylesheets/recharge/invoice.scss
+++ b/client/assets/stylesheets/recharge/invoice.scss
@@ -424,7 +424,7 @@
       font-size: 18px;
     }
   }
-  .check-common, .check-special {
+  .check-common, .check-special, .need-price-sheet, .no-price-sheet {
     width: 24px;
     height: 24px;
     display: block;
