remove unnecessary need_price_sheet helper method

--- a/app/views/marketing_dashboard/invoice_histories/index.html.erb
+++ b/app/views/marketing_dashboard/invoice_histories/index.html.erb
@@ -86,7 +86,7 @@
         <td><%= i.address %></td>
         <td><%= i.name %></td>
         <td><%= i.phone_number %></td>
-        <td><%= need_price_sheet(i) %></td>
+        <td><%= i.price_sheet %></td>
         <td><%= i.tracking_number %></td>
         <td>
           <%= link_to "编辑", send_marketing_dashboard_invoice_history_path(i), :target => "_blank" %>
