--- a/client/assets/stylesheets/campaign/shared/form.scss
+++ b/client/assets/stylesheets/campaign/shared/form.scss
@@ -460,6 +460,29 @@
 
 .creat-content-sources .forward-platform-select {
   margin-top: 34px;
+  margin-bottom: 30px;
+}
+
+input[type="number"] {
+    position: relative;
+    margin: 0 0 1rem;
+    border: 1.5px solid #BBB;
+    border-color: #BBB #ECECEC #ECECEC #BBB;
+    padding: .2rem;
+    margin-left: 0.3rem;
+}
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    background: #FFF url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAJCAYAAADgkQYQAAAAKUlEQVQYlWNgwAT/sYhhKPiPT+F/LJgEsHv37v+EMGkmkuImoh2NoQAANlcun/q4OoYAAAAASUVORK5CYII=) no-repeat center center;
+    width: 1em;
+    border-left: 1px solid #BBB;
+    opacity: .5; /* shows Spin Buttons per default (Chrome >= 39) */
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
 }
 
 .creat-content-sources .action-url-group {
