fix:syntax_mistake

--- a/app/views/marketing_dashboard/campaign_invites/index.html.erb
+++ b/app/views/marketing_dashboard/campaign_invites/index.html.erb
@@ -173,7 +173,7 @@
         <td><%= c.id %></td>
         <td>
           <% screenshot = c.screenshot.split(",") %>
-          <% example_screenshot = c.campaign.example_screenshot.split(",") %>
+          <% example_screenshot = c.get_example_screenshot(true) %>
           <% count = c.campaign.example_screenshot_count || 1 %>
           <% count.times do |t| %>
             <%= link_to image_tag(screenshot[t] , :width => "100px", class: 'screenshot-img'), screenshot , :target => "_blank", class: 'screenshot-td', data: {example: example_screenshot[t] } %>
