--- a/app/views/marketing_dashboard/kols/edit_profile.html.erb
+++ b/app/views/marketing_dashboard/kols/edit_profile.html.erb
@@ -13,6 +13,11 @@
         </div>
 
         <div class="field form-group">
+          <%= f.label "邮箱" %><br />
+          <%= f.text_field :email, autofocus: true, class: "form-control" %>
+        </div>
+
+        <div class="field form-group">
           <%= f.label "头像" %><br />
           <%= f.file_field :avatar, autofocus: true, class: "form-control" %>
           <% if @kol.avatar_url.present? %>
