--- a/app/views/marketing_dashboard/kols/index.html.erb
+++ b/app/views/marketing_dashboard/kols/index.html.erb
@@ -23,6 +23,12 @@
         </div>
         <div class="col-md-3">
           <div class="form-group">
+            <label>KOL邮箱</label>
+            <%= f.search_field :email_cont, class: "form-control", placeholder: "KOL邮箱" %>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="form-group">
             <label>KOL昵称</label>
             <%= f.search_field :name_cont, class: "form-control", placeholder: "KOL昵称" %>
           </div>
@@ -93,6 +99,7 @@
       <th>KOL ID</th>
       <th>昵称</th>
       <th>手机</th>
+      <th>邮箱</th>
       <th>来源</th>
       <th>等级</th>
       <th>角色</th>
@@ -116,6 +123,7 @@
         </td>
         <td><%= k.name %></td>
         <td><%= k.mobile_number %></td>
+        <td><%= k.email %></td>
         <td><%= k.utm_source %></td>
         <td><%= k.kol_level %></td>
         <td><%= k.kol_role %></td>
