--- a/client/assets/stylesheets/campaign/shared/form.scss
+++ b/client/assets/stylesheets/campaign/shared/form.scss
@@ -466,8 +466,8 @@
 input[type="number"] {
     position: relative;
     margin: 0 0 1rem;
-    border: 1.5px solid #BBB;
-    border-color: #BBB #ECECEC #ECECEC #BBB;
+    // border: 1.5px solid #BBB;
+    // border-color: #BBB #ECECEC #ECECEC #BBB;
     padding: .2rem;
     margin-left: 0.3rem;
 }
@@ -484,6 +484,33 @@ input[type="number"]::-webkit-inner-spin-button {
     right: 0;
     bottom: 0;
 }
+
+.perBudget {
+  width: 3em;
+}
+
+// .example-screenshot-input {
+//     position: relative;
+//     margin: 0 0 1rem;
+//     // border: 1.5px solid #BBB;
+//     // border-color: #BBB #ECECEC #ECECEC #BBB;
+//     padding: .2rem;
+//     margin-left: 0.3rem;
+//     border: none;
+// }
+//
+// .example-screenshot-input::-webkit-outer-spin-button,
+// .example-screenshot-input::-webkit-inner-spin-button {
+//     -webkit-appearance: none;
+//     background: #FFF url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAJCAYAAADgkQYQAAAAKUlEQVQYlWNgwAT/sYhhKPiPT+F/LJgEsHv37v+EMGkmkuImoh2NoQAANlcun/q4OoYAAAAASUVORK5CYII=) no-repeat center center;
+//     width: 1em;
+//     border: 1px solid #BBB;
+//     opacity: .5; /* shows Spin Buttons per default (Chrome >= 39) */
+//     position: absolute;
+//     top: 0;
+//     right: 0;
+//     bottom: 0;
+// }
 
 .creat-content-sources .action-url-group {
   .action-url-area {
