added style for three img preview

--- a/client/assets/stylesheets/campaign/shared/show.scss
+++ b/client/assets/stylesheets/campaign/shared/show.scss
@@ -92,9 +92,10 @@
 }
 
 .kolCampaignScreenshot{
-  height: 100px;
-  width: 60px;
+  height: 110px;
+  width: 66px;
   border: 1px solid #eee;
+  margin: 0 7px;
 }
 
 .showMiddleTip{
