--- a/app/views/marketing_dashboard/campaigns/add_example_screenshot.html.erb
+++ b/app/views/marketing_dashboard/campaigns/add_example_screenshot.html.erb
@@ -1,33 +1,107 @@
-<head>
-<style type="text/css">　　
-.row {
-  margin-top:15px;
-}</style>　　
-</head>
-<div class="container-fluid" style="padding: 100px 50px;">
+<style>
+  .file-uploader {
+    margin-top:15px;
+  }
+
+  .file-upload {
+  	position: relative;
+  	display: inline-block;
+  }
+
+  .file-upload__label {
+    display: block;
+    padding: 0.5em 2em;
+    color: #fff;
+    background: #2B618E;
+    border-radius: .4em;
+    transition: background .3s;
+    text-align: center;
+  }
+
+  .file-upload__label:hover {
+     cursor: pointer;
+     background: #234E72;
+  }
+
+  .file-upload__input {
+      position: absolute;
+      left: 0;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      font-size: 1;
+      width:0;
+      height: 100%;
+      opacity: 0;
+  }
+
+</style>
+<div class="container-fluid">
   <% if @campaign.example_screenshot_required? %>
-    <h1>请上传截图示例，并且添加备注</h1>
+    <h1 style="margin-bottom: 1em;">请上传截图示例，并且添加备注</h1>
   <% else %>
-    <h1>请添加具体要求</h1>
+    <h1 style="margin-bottom: 1em;">请添加具体要求</h1>
   <% end %>
   <div class="container">
-    <div class="row">
-      <form action="save_example_screenshot_and_remark" method="post" enctype="multipart/form-data" class="form-horizontal">
-        <div class="form-group video_container">
-          <label for="file-upload" class="col-sm-2 control-label">上传图片标签</label>
+    <form action="save_example_screenshot_and_remark" method="post"
+    enctype="multipart/form-data" class="form-horizontal">
+        <div class="row file-uploder" style="margin-bottom: 1.5em">
           <% count = @campaign.example_screenshot_count || 1 %>
-          <% count.times do |t| %> 
-          <div class="col-sm-8">
-            <input type="file" name="image[]"  >
-            <input type="text" name="comment[]" >
-          </div>
+          <% count.times do |t| %>
+            <div class="col-md-4">
+              <div class="file-upload">
+                <label for="file<%= t %>" class="file-upload__label">点击上传图片<%= t + 1%></label>
+                <input type="file" name="image[]"
+                 id="file<%= t %>" class="file-upload__input"/>
+                <input type="text" name="comment[]"
+                placeholder="如需备注，请在此处加入"
+                class="form-control"
+                style="width: 100%"/>
+              </div>
+              <img id="preview<%= t %>" class="preview"
+              src="http://placehold.it/180" alt="your image"/>
+            </div>
           <% end %>
         </div>
          <legend>介绍</legend>
-          <textarea placeholder="添加活动介绍" rows="20" name="remark" id="remark_text" cols="40" class="ui-autocomplete-input" autocomplete="off" role="textbox" aria-autocomplete="list" aria-haspopup="true"></textarea>
-          <button>提交</button>
+          <textarea placeholder="添加活动介绍" rows="10"
+          name="remark" id="remark_text" cols="65"
+          class="ui-autocomplete-input" autocomplete="off"
+          role="textbox" aria-autocomplete="list" aria-haspopup="true">
+          </textarea>
+          <div class="">
+            <button class="btn btn-primary">提交</button>
+          </div>
         </fieldset>
       </form>
-    </div>
   </div>
 </div>
+
+<script>
+$(document).ready(function(){
+  $("#file0").change(function(){
+    var reader = new FileReader();
+    reader.onload = function(e){
+       image_base64 = e.target.result;
+       $('#preview0').attr("src", image_base64);
+    };
+    reader.readAsDataURL($(this)[0].files[0]);
+  });
+  $("#file1").change(function(){
+    var reader = new FileReader();
+    reader.onload = function(e){
+       image_base64 = e.target.result;
+       $('#preview1').attr("src", image_base64);
+    };
+    reader.readAsDataURL($(this)[0].files[0]);
+  });
+  $("#file2").change(function(){
+    var reader = new FileReader();
+    reader.onload = function(e){
+       image_base64 = e.target.result;
+       $('#preview2').attr("src", image_base64);
+    };
+    reader.readAsDataURL($(this)[0].files[0]);
+  });
+});
+</script>
