clean up code, removed inline style

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -5,6 +5,7 @@
 *= require sass-bootstrap-glyphicons
 *= require font-awsome
 *= require marketing_dashboard/jqzoom.css
+*= require marketing_dashboard/campaigns.scss
 */
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
