--- a/app/views/marketing_dashboard/campaigns/add_example_screenshot.html.erb
+++ b/app/views/marketing_dashboard/campaigns/add_example_screenshot.html.erb
@@ -1,51 +1,13 @@
-<style>
-  .file-uploader {
-    margin-top:15px;
-  }
-
-  .file-upload {
-  	position: relative;
-  	display: inline-block;
-  }
-
-  .file-upload__label {
-    display: block;
-    padding: 0.5em 2em;
-    color: #fff;
-    background: #2B618E;
-    border-radius: .4em;
-    transition: background .3s;
-    text-align: center;
-  }
-
-  .file-upload__label:hover {
-     cursor: pointer;
-     background: #234E72;
-  }
-
-  .file-upload__input {
-      position: absolute;
-      left: 0;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      font-size: 1;
-      width:0;
-      height: 100%;
-      opacity: 0;
-  }
-
-</style>
 <div class="container-fluid">
   <% if @campaign.example_screenshot_required? %>
-    <h1 style="margin-bottom: 1em;">请上传截图示例，并且添加备注</h1>
+    <h1 class="header">请上传截图示例，并且添加备注</h1>
   <% else %>
-    <h1 style="margin-bottom: 1em;">请添加具体要求</h1>
+    <h1 class="header">请添加具体要求</h1>
   <% end %>
   <div class="container">
     <form action="save_example_screenshot_and_remark" method="post"
     enctype="multipart/form-data" class="form-horizontal">
-        <div class="row file-uploder" style="margin-bottom: 1.5em">
+        <div class="row file-uploder">
           <% count = @campaign.example_screenshot_count || 1 %>
           <% count.times do |t| %>
             <div class="col-md-4">
@@ -55,8 +17,7 @@
                  id="file<%= t %>" class="file-upload__input"/>
                 <input type="text" name="comment[]"
                 placeholder="如需备注，请在此处加入"
-                class="form-control"
-                style="width: 100%"/>
+                class="form-control"/>
               </div>
               <img id="preview<%= t %>" class="preview"
               src="http://placehold.it/180" alt="your image"/>
