remove update avail_click of campaign_invite in permanent_reject method

--- a/app/views/marketing_dashboard/campaign_invites/index.html.erb
+++ b/app/views/marketing_dashboard/campaign_invites/index.html.erb
@@ -172,7 +172,7 @@
         <% end %>
         <td><%= c.id %></td>
         <td>
-          <% screenshot = c.screenshot.split(",") %>
+          <% screenshot = c.screenshot.try(:split, ",") || [] %>
           <% example_screenshot = c.get_example_screenshot(true) %>
           <% count = c.campaign.example_screenshot_count || 1 %>
           <% count.times do |t| %>
