--- a/app/views/partner_campaign/campaign.html.erb
+++ b/app/views/partner_campaign/campaign.html.erb
@@ -64,7 +64,7 @@
                       $.ajax({
                         beforeSend: function(xhr) {xhr.setRequestHeader('X-CSRF-Token', $('meta[name="csrf-token"]').attr('content'))},
                         type:    'put',
-                        url:     '/partner_campaign/<%=@campaign.id%>/<%=@kol.id%>/complete',
+                        url: '/partner_campaign/<%=@campaign.id%>/<%=@kol.id%>/complete',
                         success: function(result){
                           showDialog("dialog_success");
                         }
@@ -174,6 +174,13 @@
         padding-top: 10px; padding-bottom: 10px; color: #6a6a6a;
         font-weight: 350">总点击: <span style="color: orange"><%= @campaign_invite.get_total_click %></span> 有效点击: <span style="color: orange"><%= @campaign_invite.get_avail_click %></span> 即将赚: <span style="color: orange"><%= @campaign_invite.earn_money %></span> 元</h2>
       </section>
+      <% if @campaign_invite.status == "rejected" %>
+        <section class="content-ro" style="height: 6rem; margin-bottom: 0;">
+          <h2 class="title-ro" style="border: 1px solid #6a6a6a;
+          padding-top: 10px; padding-bottom: 10px; color: #6a6a6a;
+          font-weight: 350">您的点击有作弊嫌疑，不会发放奖励</h2>
+        </section>
+      <% end %>
       1. 单个活动每个微信用户点击只能算一次,即使是不同的人分享的同一个活动；例如：A为B点击了活动1，之后A又为C点击了活动1，那么只有B的活动1计费。
       2. 相同 wifi 对相同的活动的每个点击需要间隔 30 秒。
     </section>
