remove sponsorship layer on samll-v daily report mailer

--- a/app/views/report_mailer/daily_smallV_report.html.erb
+++ b/app/views/report_mailer/daily_smallV_report.html.erb
@@ -10,8 +10,8 @@ Dear Miranda,
   The total budget is <b><%=@budget%></b> RMB.<br/>
   DAU is <b><%=@dau%></b>, WAU is <b><%=@wau%></b>.<br/>
   <b><%=@kol%></b> new KOLs joined the platform. <br/>
-  
-  <p>Sponsorship layer: </p>
+
+  <!-- <p>Sponsorship layer: </p>
   <table>
 	  <tr>
 		  <th>Timeframe</th>
@@ -37,7 +37,7 @@ Dear Miranda,
 		  <td align='center'><%=@all_active_leader%></td>
 		  <td align='center'><%=@all_invite%></td>
 	  </tr>
-  </table>
+  </table> -->
 	<!-- we have <b><%=@clubs%></b> new leaders and <b><%=@members%></b> new members joined in the last 24 hours.<br/> -->
 <p>
   Love, <br/>
