--- a/app/assets/stylesheets/elastic_articles.css.scss
+++ b/app/assets/stylesheets/elastic_articles.css.scss
@@ -1,108 +1,20 @@
-body {
-    margin: 0;
-    padding: 0;
- }
- 
- #background 
-{ 
-     left: 0px; 
-     top: 0px; 
-     position: relative; 
-     margin-left: auto; 
-     margin-right: auto; 
-     width: 750px;
-     height: 1334px; 
-     overflow: hidden;
-     z-index:0;
-    } 
-
- #layer_1 
-{ 
-     left: 0px; 
-     top: 0px; 
-     position: absolute; 
-     width: 750px;
-     height: 1334px;
-     z-index:1;
-} 
-
- #layer_1_0 
-{ 
-     left: -3515px; 
-     top: -461px; 
-     position: absolute; 
-     width: 11019px;
-     height: 348px;
-     z-index:2;
-} 
-
- #layer_1_1 
-{ 
-     left: -3400px; 
-     top: 0px; 
-     position: absolute; 
-     width: 750px;
-     height: 4107px;
-     z-index:3;
-} 
-
- #layer_1_2 
-{ 
-     left: -2550px; 
-     top: 0px; 
-     position: absolute; 
-     width: 750px;
-     height: 4107px;
-     z-index:4;
-} 
-
- #layer_5 
-{ 
-     left: -1700px; 
-     top: 0px; 
-     position: absolute; 
-     width: 750px;
-     height: 1334px;
-     z-index:5;
-} 
-
- #layer_408167443952167863 
-{ 
-     left: -850px; 
-     top: 0px; 
-     position: absolute; 
-     width: 750px;
-     height: 1334px;
-     z-index:6;
-} 
-
- #h5 
-{ 
-     left: 0px; 
-     top: 0px; 
-     position: absolute; 
-     width: 750px;
-     height: 1334px;
-     z-index:7;
-} 
-
- #layer_8 
-{ 
-     left: 1700px; 
-     top: 0px; 
-     position: absolute; 
-     width: 750px;
-     height: 1334px;
-     z-index:8;
-} 
-
- #layer_9 
-{ 
-     left: 850px; 
-     top: 0px; 
-     position: absolute; 
-     width: 750px;
-     height: 1334px;
-     z-index:9;
-}
-
+html{font-size: 10px;}
+body{font-size: 0.14rem;/*实际相当于14px*/}
+body{padding:0;margin:0;background-color: #f5f5f5;}
+.img1{width:3.75rem;}
+.download{position: absolute;bottom: 0;background-color: #fff;width: 100%;border-top:1px solid #e9e9e9;height:59px}
+.logo{float: left;}
+.logo img{ margin: 10px 8px 5px 15px}
+.robin8{float: left; margin-top:13px}
+.robin_font{ font-size:11px}
+.down{display: inline-block; float: right; width: 20%;height: 24px; border: 1px solid #ecb200;color: #ecb200; font-size: 0.1rem; border-radius: 30px; line-height: 24px; text-align: center; margin: 17px 15px 12px 0px; font-family:Microsoft Yahei;}
+.content{width: 100%; height: auto; background-color: #ffffff;font-family:Microsoft Yahei; border-top: 1px solid #e9e9e9; overflow: hidden}
+.profile_photo{display: inline-block; float: left;width: 41px;height: 41px; border: 1px solid #eeeeee;margin: 15px 10px 14px 15px;border-radius: 30px;}
+.wording{ width: 91%; margin: 0 auto; font-family:Microsoft Yahei;font-size: 0.15rem; line-height: 26px; margin-bottom: 10px}
+.moment_img{width: 91%; margin: 0 auto; overflow: hidden}
+.moment_img span{display: inline-block;float: left;width: 31.5%; height: 31.5%; margin-right: 5px}
+.moment_img span img{width: 100%; height: 100%;}
+.great{ width: 91%; margin: 0 auto; border-top: 1px solid #e9e9e9; height:auto; margin-top: 10px; overflow: hidden}
+.p_num{display: inline-block; float: left;font-size: 0.12rem;font-family:Microsoft Yahei;color: #777777; margin-top: 13px; margin-bottom: 15px}
+.zan{display: inline-block; float: right;font-size: 0.12rem;font-family:Microsoft Yahei;color: #777777; margin-top: 13px; margin-bottom: 15px; }
+.zan img{vertical-align: middle; margin-right: 6px}
