--- a/app/views/elastic_articles/forward.html.erb
+++ b/app/views/elastic_articles/forward.html.erb
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />     
     <meta name="format-detection" content="telephone=no" />     
     <meta name="viewport" content="width=device-width,height=device-height,inital-scale=1.0,maximum-scale=1.0,user-scalable=no;"> 
-    <title>spec</title>
+    <title><%= @res['title'] %></title>
     <%= stylesheet_link_tag 'elastic_articles' %>  
   </head>
   <body>
