--- a/app/assets/stylesheets/elastic_articles.css.scss
+++ b/app/assets/stylesheets/elastic_articles.css.scss
@@ -2,19 +2,19 @@ html{font-size: 10px;}
 body{font-size: 0.14rem;/*实际相当于14px*/}
 body{padding:0;margin:0;background-color: #f5f5f5;}
 .img1{width:3.75rem;}
-.download{position: absolute;bottom: 0;background-color: #fff;width: 100%;border-top:1px solid #e9e9e9;height:59px}
+.download{position: absolute;bottom: 0;background-color: #fff;width: 100%;border-top:1px solid #e9e9e9;height:70px}
 .logo{float: left;}
 .logo img{ margin: 10px 8px 5px 15px}
 .robin8{float: left; margin-top:13px}
-.robin_font{ font-size:11px}
-.down{display: inline-block; float: right; width: 20%;height: 24px; border: 1px solid #ecb200;color: #ecb200; font-size: 0.1rem; border-radius: 30px; line-height: 24px; text-align: center; margin: 17px 15px 12px 0px; font-family:Microsoft Yahei;}
+.robin_font{ font-size:15px}
+.down{display: inline-block; float: right; width: 30%;height: 35px; border: 1px solid #ecb200;color: #ecb200; border-radius: 30px; line-height: 34px; text-align: center; margin: 17px 15px 12px 0px;font-size: 1.8rem;font-family:Microsoft Yahei;}
 .content{width: 100%; height: auto; background-color: #ffffff;font-family:Microsoft Yahei; border-top: 1px solid #e9e9e9; overflow: hidden}
 .profile_photo{display: inline-block; float: left;width: 41px;height: 41px; border: 1px solid #eeeeee;margin: 15px 10px 14px 15px;border-radius: 30px;}
-.wording{ width: 91%; margin: 0 auto; font-family:Microsoft Yahei;font-size: 0.15rem; line-height: 26px; margin-bottom: 10px}
+.wording{ width: 91%; margin: 0 auto; font-family:Microsoft Yahei; color: #333333; font-size: 1.875rem; line-height: 26px; margin-bottom: 10px}
 .moment_img{width: 91%; margin: 0 auto; overflow: hidden}
 .moment_img span{display: inline-block;float: left;width: 31.5%; height: 31.5%; margin-right: 5px}
 .moment_img span img{width: 100%; height: 100%;}
 .great{ width: 91%; margin: 0 auto; border-top: 1px solid #e9e9e9; height:auto; margin-top: 10px; overflow: hidden}
-.p_num{display: inline-block; float: left;font-size: 0.12rem;font-family:Microsoft Yahei;color: #777777; margin-top: 13px; margin-bottom: 15px}
-.zan{display: inline-block; float: right;font-size: 0.12rem;font-family:Microsoft Yahei;color: #777777; margin-top: 13px; margin-bottom: 15px; }
+.p_num{display: inline-block; float: left;font-size: 1.625rem;font-family:Microsoft Yahei;color: #777777; margin-top: 13px; margin-bottom: 15px}
+.zan{display: inline-block; float: right;font-size: 1.625rem;font-family:Microsoft Yahei;color: #777777; margin-top: 13px; margin-bottom: 15px; }
 .zan img{vertical-align: middle; margin-right: 6px}
