update elastic_articles css

--- a/app/views/elastic_articles/forward.html.erb
+++ b/app/views/elastic_articles/forward.html.erb
@@ -16,8 +16,8 @@
             <%= image_tag @res['avatar_url'], width: "41" %>
           </span>
           <div class="robin8" style="margin-top:15px">
-                <div style="font-size:1.75rem"><%= @res['profile_name'] %></div>
-                <div class="robin_font" style="font-size:1.5rem;color:#bbbbbb"><%= @res['time'] %></div>
+            <div class="title"><%= @res['profile_name'] %></div>
+              <div class="robin_font" style="font-size:1.5rem;color:#bbbbbb"><%= @res['time'] %></div>
             </div>
         </div>
         <div class="wording"><%= @res['title'] %></div>
