--- a/app/views/marketing_dashboard/campaign_invites/index.html.erb
+++ b/app/views/marketing_dashboard/campaign_invites/index.html.erb
@@ -11,6 +11,12 @@
       <div class="row">
         <div class="col-md-3">
           <div class="form-group">
+            <label>截图 ID</label>
+            <%= f.search_field :id_eq, class: "form-control", placeholder: "截图 ID" %>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="form-group">
             <label>KOL ID</label>
             <%= f.search_field :kol_id_eq, class: "form-control", placeholder: "KOL ID" %>
           </div>
