--- a/app/views/layouts/_partners_nav.html.erb
+++ b/app/views/layouts/_partners_nav.html.erb
@@ -6,33 +6,10 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <%= link_to 'Robin8 Marketing Dashboard', marketing_dashboard_path, class: "navbar-brand" %>
+    <div class="navbar-brand">
+      <%= "Robin8 X #{@admintag.tag}" %>
+    </div>
   </div>
-
-  <ul class="nav navbar-top-links navbar-right">
-    <li class="dropdown">
-      <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-        <i class="fa fa-user fa-fw"></i> <%= current_admin_user.email %>  <i class="fa fa-caret-down"></i>
-      </a>
-      <ul class="dropdown-menu dropdown-user">
-        <% if session[:locale] == 'zh' || session[:locale].blank?  %>
-          <li>
-            <%= link_to "切换为英文(Switch To English)", marketing_dashboard_path(:locale => 'en') %>
-          </li>
-        <% else %>
-          <li>
-            <%= link_to "切换为中文(Switch To Chinese)", marketing_dashboard_path(:locale => 'zh') %>
-          </li>
-        <% end %>
-        <li>
-          <%= link_to t("menu.edit_password"), marketing_dashboard_edit_password_path %>
-        </li>
-        <li>
-          <a href="/admin_users/sign_out"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
-        </li>
-      </ul>
-    </li>
-  </ul>
 
   <div class="navbar-default sidebar" role="navigation">
     <div class="sidebar-nav navbar-collapse">
