--- a/app/views/layouts/_partners_nav.html.erb
+++ b/app/views/layouts/_partners_nav.html.erb
@@ -15,10 +15,10 @@
     <div class="sidebar-nav navbar-collapse">
       <ul class="nav" id="side-menu">
         <li>
-          <%= link_to "用户", "#", :target => '_blank' %>
+          <%= link_to "Kol", partners_kols_path, target: '_blank' %>
         </li>
         <li>
-          <%= link_to "截图", "#", :target => '_blank' %>
+          <%= link_to "截图", partners_campaign_invites_path, target: '_blank' %>
         </li>
       </ul>
 
